<resources>
    <string name="app_name">The Farmers App</string>
    <string name="blackSpot">Black Spot Disease
    \nBlack spot  is the most important fungal disease of roses worldwide. The initial symptoms start as feathery-edged, black spots on lower leaves. As these spots enlarge, the leaves turn yellow and drop off. The disease continues up the stems until the entire plant becomes defoliated.
    \nWhat is the cause of blacks-pot?
    \nBlack spot may develop in fruit when they begin to ripen and in leaves when conditions favour disease development. The main source of infection is spore masses produced on old, un decomposed leaves and shrivelled fruit. The spores are spread by rain splash, by overhead irrigation and on the hands of pickers.
    \n Symptoms of black spot disease include small, circular black spots on the leaves that may merge to form larger, irregular-shaped spots. The spots may also have a yellowish halo around them. As the disease progresses, the leaves may turn yellow and drop prematurely, weakening the plant and reducing its ability to produce fruit or flowers.

\nBlack spot disease is spread by spores that are produced by the fungus and carried by wind and water. The spores can survive on plant debris and in the soil, making it difficult to control the disease once it becomes established in an area.

\nTo prevent and control black spot disease, it is important to practice good plant hygiene, such as removing infected leaves and debris from the garden and avoiding overcrowding of plants. Fungicides may also be used to control the disease, but they should be used judiciously and according to label instructions to avoid harming beneficial insects and pollinators.

\nIn addition to chemical control measures, cultural practices such as planting disease-resistant varieties, providing proper drainage and air circulation, and avoiding overhead watering can also help to prevent and control black spot disease in crops. Regular monitoring and early detection of the disease can also help to prevent its spread and minimize its impact on crop yields.

    </string>
    <string name="blight">
        \nBlight is a type of plant disease that affects many crops, including tomatoes, potatoes, peppers, and eggplants. The disease is caused by several types of fungi-like organisms, including Phytophthora infestans and Alternaria solani.

\nSymptoms of blight can vary depending on the type of crop and the stage of the disease, but commonly include leaf spots, stem lesions, and fruit rot. Infected leaves may also curl, wilt, or turn yellow or brown, and infected fruit may become discolored and soft.

\nBlight can be spread by wind, water, and infected plant material, and can be more common in wet or humid weather conditions. To prevent and control blight, it is important to practice good plant hygiene, such as removing infected leaves and debris from the garden, providing adequate air circulation, and avoiding overhead watering. Fungicides may also be used to control the disease, but they should be used judiciously and according to label instructions to avoid harming beneficial insects and pollinators.

\nCultural practices such as crop rotation, choosing disease-resistant varieties, and planting at the appropriate time can also help to prevent and control blight in crops. Regular monitoring and early detection of the disease can also help to prevent its spread and minimize its impact on crop yields.

    </string>
    <string name="bulleted_list"><b><big>Schemes provided for farmers </big></b>
        \n <li>Pradhan Mantri Fasal Bima Yojana </li>
        \n <li>Weather Based Crop Insurance Scheme </li>
        \n <li>Coconut Palm Insurance Scheme </li>
        \n <li>Unified Package Insurance Scheme as pilot in notified districts. </li>
        \n <li>Pradhan Mantri Krishi Sinchai Yojana</li>

    </string>
    <string name="PMFBY"><b><big>Pradhan Mantri Fasal Bima Yojana </big></b>
        \nUnder the scheme, farmers pay a nominal premium, while the government provides the rest of the premium as subsidy. The scheme covers crops grown during Kharif and Rabi seasons as well as horticultural and commercial crops. The insurance coverage is available to all farmers, including sharecroppers and tenant farmers.

\nThe PMFBY scheme uses technology to assess crop loss and facilitate speedy compensation to farmers. The scheme also aims to encourage the use of modern agricultural practices and techniques to reduce the risk of crop failure.

\nThe main objectives of PMFBY include:

\n1.Providing financial support to farmers in case of crop failure due to natural calamities, pests and diseases.
\n2.Encouraging farmers to adopt modern agricultural practices and techniques.
\n3.Ensuring timely and accurate payment of insurance claims to farmers.
\n4.Increasing the coverage of crop insurance in the country.
\nOverall, the PMFBY scheme aims to provide a safety net to farmers and protect them against financial losses due to crop failure.

    </string>
    <string name="WBCIS"><b><big>Weather Based Crop Insurance Scheme</big></b>
        \nUnder the WBCIS scheme, the insurance premium is calculated based on the weather parameters that are likely to affect crop yields, such as rainfall, temperature, humidity, and wind speed. The scheme covers crops grown during Kharif and Rabi seasons as well as horticultural crops. The insurance coverage is available to all farmers, including sharecroppers and tenant farmers.

\nThe scheme uses weather data collected from automatic weather stations and other sources to assess crop loss and facilitate speedy compensation to farmers. The scheme also aims to encourage the use of modern agricultural practices and techniques to reduce the risk of crop failure due to adverse weather conditions.

\nThe main objectives of WBCIS include:

\n1.Providing financial support to farmers in case of crop loss or damage due to adverse weather conditions.
\n2.Encouraging farmers to adopt modern agricultural practices and techniques.
\n3.Ensuring timely and accurate payment of insurance claims to farmers.
\n4.Increasing the coverage of crop insurance in the country.
\nOverall, the WBCIS scheme aims to provide a safety net to farmers and protect them against financial losses due to adverse weather conditions. The scheme is a step towards achieving the goal of increasing farmers  income and ensuring food security in the country.
    </string>
    <string name="CPIS"><b><big>Coconut Palm Insurance Scheme</big></b>
        \nThe Coconut Palm Insurance Scheme is a crop insurance scheme launched by the Government of India to provide protection to coconut farmers against losses due to natural calamities like cyclones, storms, floods, pest and diseases, fire, lightning, etc. The scheme is implemented by the Coconut Development Board , a statutory body under the Ministry of Agriculture and Farmers Welfare, Government of India.

\nUnder this scheme, coconut farmers can insure their palms against any risk of loss or damage to their coconut palms. The insurance coverage is available for both mature and immature palms. The premium for the insurance scheme is subsidized by the government to make it affordable for farmers.

\nThe Coconut Palm Insurance Scheme covers the following risks:

\n1.Natural calamities such as cyclones, storms, floods, pests and diseases, fire, lightning, etc.
\n2.Mortality of coconut palms due to any reason, including age-related issues.
\nThe main objective of the Coconut Palm Insurance Scheme is to provide protection to coconut farmers against losses due to natural calamities and other risks. This scheme helps to provide financial support to farmers in case of crop loss and protects their livelihoods. The scheme also helps to encourage coconut cultivation and promotes sustainable agriculture practices in the country.
    </string>
    <string name="UPIS"><b><big>Unified Package Insurance Scheme </big></b>
        The Unified Package Insurance Scheme  is a pilot crop insurance scheme launched by the Government of India in select notified districts. The scheme is designed to provide comprehensive insurance coverage to farmers against various risks and uncertainties in crop production.

\nUnder this scheme, farmers can avail of a package of insurance coverages, which includes:

\n1.Crop insurance against losses due to natural calamities like floods, droughts, cyclones, pests, and diseases.
\n2.Personal accident insurance cover for the farmer and his family members.
\n3.Asset insurance cover for farm equipment and other assets.
\nThe UPIS scheme is implemented by the Agricultural Insurance Company of India  in collaboration with state governments and district administrations. The premium for the insurance coverages is subsidized by the government to make it affordable for farmers.

\nThe main objective of the UPIS scheme is to provide comprehensive insurance coverage to farmers against various risks and uncertainties in crop production. The scheme aims to encourage farmers to adopt modern agricultural practices and techniques and ensure food security in the country.

\nOverall, the UPIS scheme is a step towards achieving the goal of increasing farmers  income and promoting sustainable agriculture practices in the country. The pilot scheme will help to evaluate the effectiveness of the scheme and make necessary modifications before rolling out the scheme nationwide.
    </string>
    <string name="PMKSY"><b><big>Pradhan Mantri Krishi Sinchai Yojana</big></b>
        \nThe scheme aims to achieve convergence of investments in irrigation at the field level, expand cultivable area under assured irrigation, and improve on-farm water use efficiency to reduce wastage of water.

\nThe Pradhan Mantri Krishi Sinchai Yojana has three components:

\nAccelerated Irrigation Benefit Programme : This component aims to provide financial assistance to states to accelerate the completion of ongoing irrigation projects.

\n1.Har Khet Ko Pani : This component focuses on creating new water sources, repairing and restoring traditional water storage systems, and supporting micro-irrigation through the use of drip and sprinkler systems.

\n2.Per Drop More Crop : This component aims to promote water saving technologies, precision irrigation, and other measures to improve water use efficiency in agriculture.

\n3.This is being implemented by the Ministry of Agriculture and Farmers Welfare, Government of India, and the scheme is being monitored at both the national and state levels. The scheme provides financial assistance to states for various activities related to water management, including creation of water sources, distribution networks, and water-saving technologies.

\nThe main objective  is to enhance water use efficiency in agriculture and achieve the goal of "more crop per drop". The scheme is expected to benefit farmers across the country and improve the productivity and profitability of agriculture.
    </string>
</resources>