<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:id="@+id/flFragment"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/farming"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
          />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/green"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">
            <com.denzcoskun.imageslider.ImageSlider
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/imageSlider"
                app:iss_period="2000"
                app:iss_auto_cycle="true"
                app:iss_delay="2000"
                app:iss_corner_radius="20"
                app:iss_title_background="@drawable/button_background"
                tools:ignore="MissingClass" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="15dp"
            android:text="@string/bulleted_list"
            android:justificationMode="inter_word"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="20dp"
        />
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:padding="15dp"
            android:text="@string/PMFBY"
            android:justificationMode="inter_word"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@drawable/button3background"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:padding="15dp"
            android:text="@string/WBCIS"
            android:justificationMode="inter_word"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@drawable/button2background"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:padding="15dp"
            android:text="@string/CPIS"
            android:justificationMode="inter_word"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@drawable/button3background"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="1100dp"
            android:padding="15dp"
            android:text="@string/UPIS"
            android:justificationMode="inter_word"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@drawable/button2background"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="1100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="200dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button3background"
            android:justificationMode="inter_word"
            android:padding="15dp"
            android:text="@string/PMKSY"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>
